--- a/css/index.css
+++ b/css/index.css
@@ -9,9 +9,6 @@ body {
     font-family: sans-serif;
 }
 
-.banners {
-}
-
 .banner {
     width: 920px;
     height: 300px;
@@ -29,7 +26,7 @@ body {
     color: white;
 }
 
-.collections {
+#collections {
     margin-top: 20px;
 }
 
@@ -50,12 +47,12 @@ body {
     margin-right: 10px;
 }
 
-.items {
+#items {
     margin: auto;
     margin-top: 40px;
 }
 
-.items .navigation {
+#items .navigation {
     display: none;
 }
 
