--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,7 @@ body {
 }
 
 #collections {
-    margin-top: 20px;
+    margin-top: 0;
 }
 
 .collection-col > .collection {
@@ -49,7 +49,7 @@ body {
 
 #items {
     margin: auto;
-    margin-top: 40px;
+    margin-top: 0;
 }
 
 #items .navigation {
@@ -67,6 +67,19 @@ body {
 
 }
 
+.banner, .collection, .item {
+    outline: 0;
+    transition: transform 0.2s linear, box-shadow 0.2s linear, filter 0.2s linear;
+}
+.banner:focus, .collection:focus, .item:focus {
+    /*opacity: 0.8;*/
+    filter: brightness(1.2);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    transform: scale(1.1);
+    transform-origin: 50%;
+    z-index: 65535;
+}
+
 #infscr-loading {
     position: fixed;
     bottom: 20px;
@@ -79,6 +92,11 @@ body {
 #infscr-loading em {
     color: #FFF;
     text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
+}
+
+.flickity-viewport {
+    padding-bottom: 30px;
+    box-sizing: content-box;
 }
 
 @media (max-width: 1000px){
