--- a/css/index.css
+++ b/css/index.css
@@ -76,9 +76,13 @@ body {
     text-align: center;
 }
 
-#infscr-loading em {
-    color: #FFF;
-    text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
+#infscr-loading > div {
+    font-style: normal;
+    font-weight: bolder;
+    color: #383838;
+    line-height: 36px;
+    font-size: 20px;
+    text-shadow: 1px 1px rgba(255, 255, 255, 0.5);
 }
 
 @media (max-width: 1000px){
